--- a/dada/templates/send_email_test_recipient_widget.tmpl
+++ b/dada/templates/send_email_test_recipient_widget.tmpl
@@ -1,8 +1,21 @@
 <!-- begin send_email_test_recipient_widget.tmpl --> 
-
 <div id="send_test_messages_to"> 
- <label for="test_recipient">Send Test Messages To:</label>
- <input type="text" id="test_recipient" class="midi" name="test_recipient" value="<!-- tmpl_var list_settings.list_owner_email -->" />
+	<div class="row">
+		<div class="large-3 columns">
+			<label for="test_recipient" class="large-right medium-right">
+				Send Test Messages To:
+			</label>
+		</div>
+		<div class="large-9 columns">
+			<input 
+				type="text" 
+				id="test_recipient" 
+				class="midi" 
+				name="test_recipient" 
+				value="<!-- tmpl_var list_settings.list_owner_email -->" 
+				placeholder="you@yours.com"
+			/>
+		</div>
+	</div>
 </div>
-
 <!-- end send_email_test_recipient_widget.tmpl --> 
