--- a/dada/templates/help_link_widget.tmpl
+++ b/dada/templates/help_link_widget.tmpl
@@ -2,15 +2,13 @@
 
 <!-- tmpl_if SHOW_HELP_LINKS --> 
 
-
-	<div class="buttonfloat">
+<div class="row">
+   <div class="small-12 columns">
 		<form action="<!-- tmpl_var HELP_LINKS_URL -->/<!-- tmpl_var screen -->.html" target="_blank" accept-charset="<!-- tmpl_var HTML_CHARSET -->" style="display: inline; margin: 0;"> 
 			<input class="button info tiny" type="submit" value="Help" /> 
 		</form>
 	</div>
-	<div class="floatclear"></div>
-	
-
+</div>
 <!-- /tmpl_if --> 
 
 <!-- end help_link_widget.tmpl --> 
