--- a/dada/templates/admin_template.tmpl
+++ b/dada/templates/admin_template.tmpl
@@ -97,6 +97,31 @@
         table { 
             border: 1px solid red; 
         }
+		
+		iframe#archived_message_body_container {
+			height: 500px;
+			width: 100%;
+			border: 1px solid #000;
+			/* text-styling rules will have NO effect in here. see below instead. */
+		}
+		
+		.file-upload {
+		  position: relative;
+		  overflow: hidden;
+		  margin: 10px; }
+
+		.file-upload input.file-input {
+		  position: absolute;
+		  top: 0;
+		  right: 0;
+		  margin: 0;
+		  padding: 0;
+		  font-size: 20px;
+		  cursor: pointer;
+		  opacity: 0;
+		  filter: alpha(opacity=0);
+	   }
+		
     </style> 
     
 </head>
